--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-radial-gradient": "^1.1.5",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^15.8.0"
   },
   "devDependencies": {
