--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "gradlewClean": "cd android && ./gradlew clean"
+    "gradlewClean": "cd android && ./gradlew clean",
+    "apk": "cd android && ./gradlew assembleRelease"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "react": "18.3.1",
     "react-native": "0.76.0",
+    "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-radial-gradient": "^1.1.5",
