--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react": "^18.2.6",
     "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-native-vector-icons": "^6.4.18",
+    "@types/react-native-video-player": "^0.10.7",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
