--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
-    "react-native-svg": "^15.8.0"
+    "react-native-svg": "^15.8.0",
+    "react-native-video": "^6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
