--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "apk": "cd android && ./gradlew assembleRelease"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
+    "mobx": "^6.13.5",
+    "mobx-react": "^9.1.1",
     "react": "18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-native": "0.76.0",
     "react-native-config": "^1.5.3",
+    "react-native-device-info": "^14.0.1",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-radial-gradient": "^1.1.5",
