--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,10 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# react-native-config
+ios/tmp.xcconfig
+ios/GoogleService-Info.plist
+.env
+android/app/google-services.json
+android/app/key.properties
