--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,9 @@
 {
   "extends": "@react-native/typescript-config/tsconfig.json",
-  "include": ["src/components", "src/custom.d.ts"]
+  "include": ["src/components", "src/custom.d.ts"],
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "useDefineForClassFields": true
+  }
 }
