--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "react-native": "0.76.0",
     "react-native-config": "^1.5.3",
     "react-native-device-info": "^14.0.1",
-    "react-native-gesture-handler": "^2.20.2",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-radial-gradient": "^1.1.5",
-    "react-native-reanimated": "^3.16.1",
+    "react-native-reanimated": "^3.16.3",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
-    "react-native-svg": "^15.8.0",
-    "react-native-svg-charts": "^5.4.0",
-    "react-native-video": "^6.7.0"
+    "react-native-svg": "^15.9.0",
+    "react-native-video": "^6.7.0",
+    "victory-native": "^37.0.3-next.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
