--- a/ios/ifgapp/Info.plist
+++ b/ios/ifgapp/Info.plist
@@ -24,6 +24,10 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSHealthShareUsageDescription</key>
+	<string>We need access to your health data to show your steps, calories, and flights climbed.</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>We need access to update your health data.</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
