health connect android integration

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,11 +108,17 @@ android {
         }
     }
 }
-
+repositories {
+    flatDir {
+        dirs '../libs'  // Путь к папке, где находится ваш .aar файл
+    }
+    // другие репозитории, если необходимо
+}
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation project(':react-native-config')
+    implementation("androidx.health.connect:connect-client:1.1.0-alpha10")
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
