--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-config": "^1.5.3",
     "react-native-device-info": "^14.0.1",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-health-connect": "^3.3.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-radial-gradient": "^1.1.5",
     "react-native-reanimated": "^3.16.3",
