--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-device-info": "^14.0.1",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-health-connect": "^3.3.1",
+    "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-radial-gradient": "^1.1.5",
     "react-native-reanimated": "^3.16.3",
@@ -34,6 +35,7 @@
     "react-native-screens": "^3.35.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^15.9.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-video": "^6.7.0",
     "victory-native": "^37.3.2"
   },
