--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "apk": "cd android && ./gradlew assembleRelease"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.6",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-firebase/app": "^21.6.1",
+    "@react-native-firebase/messaging": "^21.6.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
