--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "mobx": "^6.13.5",
     "mobx-react": "^9.1.1",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-native": "0.76.0",
