--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react-native-svg": "^15.9.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-video": "^6.7.0",
+    "react-native-webview": "^13.12.5",
+    "react-native-youtube-iframe": "^2.3.0",
     "victory-native": "^37.3.2"
   },
   "devDependencies": {
