--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
+    "htmlparser2": "^9.1.0",
     "mobx": "^6.13.5",
     "mobx-react": "^9.1.1",
     "moment": "^2.30.1",
