--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -56,6 +56,8 @@
             <category android:name="android.intent.category.HEALTH_PERMISSIONS" />
           </intent-filter>
         </activity-alias>
+        <!-- <meta-data android:name="com.google.firebase.messaging.default_notification_icon"
+                 android:resource="@drawable/ic_notification" /> -->
     </application>
     <queries>
         <package android:name="com.google.android.apps.healthdata" />
