--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "react-native-gesture-handler": "^2.21.2",
     "react-native-health-connect": "^3.3.1",
     "react-native-image-picker": "^7.2.3",
+    "react-native-intersection-observer": "^0.2.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-radial-gradient": "^1.1.5",
     "react-native-reanimated": "^3.16.3",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^15.9.0",
     "react-native-toast-message": "^2.2.1",
