--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,20 +3,66 @@ buildscript {
         buildToolsVersion = "35.0.0"
         minSdkVersion = 26
         compileSdkVersion = 35
-        targetSdkVersion = 34
+        targetSdkVersion = 33
         ndkVersion = "26.1.10909125"
-        kotlinVersion = "1.9.24"
+        kotlinVersion = "1.9.22"
+        versionCode = 1
+        versionName = "1.0"
+        // build_gradle_version = '8.7'
+        // kotlin_version = '1.9.23'
+        // dokka_version = '0.9.17'
+        // okhttp_version = '4.11.0'
+        // mockito_version = '5.3.0'
+        // robolectric_version = '4.11.1'
+        // yoo_sdk_auth_version = '2.10.0'
+        // ui_lib_version = '2.31.0'
+        // ui_compose_lib_version = '2.31.0'
+        // march_lib_version = "1.4.0"
+        // march_compose = '1.2.0'
+        // junit = '4.13.2'
+        // appcompat = '1.6.1'
+        // material = '1.9.0'
+        // recyclerview = '1.3.1'
+        // constraintlayout = '2.1.4'
+        // espresso_core = '3.5.1'
+        // espresso_intents = '3.5.1'
+        // espresso_web = '3.5.1'
+        // androidx_junit = '1.1.5'
+        // yoopinning = '1.5.0'
+        // retrofit = '2.9.0'
+        // jackson = '2.13.5'
+        // gibsdk = '2.2.0'
+        // yooprofiler = '3.3.0'
+        // kotlin_compiler_extension = '1.5.11'
+        // //sberpay Sdk dependencies begin
+        // sberpay = '2.2.4'
+        // sber_id_sdk = '2.4.3'
+        // dynatrace = '8.257.1.1007'
+        // gson = '2.3.0'
+        // jsoup = '1.13.1'
+        // play_services = '18.0.1'
+        // play_services_appset = '16.0.2'
+        // timber = '5.0.1'
+        // threetenabp = '1.4.6'
+        // threetenbp = '1.6.8'
+        // coil = '2.4.0'
+        // shimmer = '0.5.0'
+        // firebase_database_ktx = '20.2.0'
+        // biometric = '1.1.0'
+        // security_crypto = '1.1.0-alpha06'
+        // lottie = '6.2.0'
     }
     repositories {
         google()
         mavenCentral()
         mavenLocal()
         jcenter()
+        maven { url 'https://developer.huawei.com/repo/'}
     }
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31")
         classpath 'com.google.gms:google-services:4.4.2'
     }
 }
