--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -8,3 +8,5 @@ include ':react-native-config'
 project(':react-native-config').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-config/android')
 include ':react-native-image-picker'
 project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
+// include ':yookassa-module'
+// project(':yookassa-module').projectDir = new File(rootProject.projectDir, "yookassa-module")
