--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-device-info": "^14.0.1",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-health-connect": "^3.3.1",
+    "react-native-htmlview": "^0.17.0",
     "react-native-image-picker": "^7.2.3",
     "react-native-intersection-observer": "^0.2.0",
     "react-native-linear-gradient": "^2.8.3",
