--- a/ios/iFeelGood.xcodeproj/xcshareddata/xcschemes/ifgapp.xcscheme
+++ b/ios/iFeelGood.xcodeproj/xcshareddata/xcschemes/ifgapp.xcscheme
@@ -16,8 +16,8 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "ifgapp.app"
-               BlueprintName = "ifgapp"
-               ReferencedContainer = "container:ifgapp.xcodeproj">
+               BlueprintName = "iFeelGood"
+               ReferencedContainer = "container:iFeelGood.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ifgappTests.xctest"
-               BlueprintName = "ifgappTests"
-               ReferencedContainer = "container:ifgapp.xcodeproj">
+               BuildableName = "iFeelGoodTests.xctest"
+               BlueprintName = "iFeelGoodTests"
+               ReferencedContainer = "container:iFeelGood.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -56,8 +56,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "ifgapp.app"
-            BlueprintName = "ifgapp"
-            ReferencedContainer = "container:ifgapp.xcodeproj">
+            BlueprintName = "iFeelGood"
+            ReferencedContainer = "container:iFeelGood.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -73,8 +73,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "ifgapp.app"
-            BlueprintName = "ifgapp"
-            ReferencedContainer = "container:ifgapp.xcodeproj">
+            BlueprintName = "iFeelGood"
+            ReferencedContainer = "container:iFeelGood.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
