--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-image-picker": "^7.2.3",
     "react-native-intersection-observer": "^0.2.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-localize": "^3.4.1",
     "react-native-radial-gradient": "^1.1.5",
     "react-native-reanimated": "^3.16.3",
     "react-native-render-html": "^6.3.4",
