remade insta-stories

--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "react-native-health-connect": "^3.3.1",
     "react-native-htmlview": "^0.17.0",
     "react-native-image-picker": "^7.2.3",
-    "react-native-insta-story": "^1.1.9",
     "react-native-intersection-observer": "^0.2.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.4.1",
+    "react-native-modalbox": "^2.0.2",
     "react-native-radial-gradient": "^1.1.5",
     "react-native-reanimated": "^3.17.1",
     "react-native-render-html": "^6.3.4",
@@ -46,9 +46,9 @@
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^15.9.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-toast-message": "^2.2.1",
     "react-native-video": "^6.11.0",
-    "react-native-video-cache-control": "^1.2.3",
     "react-native-webview": "^13.13.2",
     "react-native-youtube-iframe": "^2.3.0",
     "victory-native": "^37.3.2"
