--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@notifee/react-native": "^7.8.0",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/slider": "^4.5.5",
+    "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/messaging": "^21.6.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
