--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
   <uses-permission android:name="android.permission.health.READ_TOTAL_CALORIES_BURNED"/>
   <!-- <uses-permission android:name="android.permission.health.READ_ACTIVE_CALORIES_BURNED"/> -->
   <uses-permission android:name="android.permission.health.WRITE_TOTAL_CALORIES_BURNED"/>
-  <uses-permission android:name="android.permission.health.READ_ELEVATION_GAINED"/>
+  <!-- <uses-permission android:name="android.permission.health.READ_ELEVATION_GAINED"/> -->
   <uses-permission android:name="android.permission.health.READ_STEPS"/>
   <uses-permission android:name="android.permission.health.WRITE_STEPS"/>
   <uses-permission android:name="android.permission.health.READ_FLOORS_CLIMBED"/>
