--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,7 +18,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'iFeelGood' do
+target 'ifeelgood' do
   config = use_native_modules!
 
   use_react_native!(
