--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
   <uses-permission android:name="android.permission.health.READ_TOTAL_CALORIES_BURNED"/>
   <!-- <uses-permission android:name="android.permission.health.READ_ACTIVE_CALORIES_BURNED"/> -->
-  <uses-permission android:name="android.permission.health.WRITE_TOTAL_CALORIES_BURNED"/>
+  <!-- <uses-permission android:name="android.permission.health.WRITE_TOTAL_CALORIES_BURNED"/> -->
   <!-- <uses-permission android:name="android.permission.health.READ_ELEVATION_GAINED"/> -->
   <uses-permission android:name="android.permission.health.READ_STEPS"/>
-  <uses-permission android:name="android.permission.health.WRITE_STEPS"/>
+  <!-- <uses-permission android:name="android.permission.health.WRITE_STEPS"/> -->
   <uses-permission android:name="android.permission.health.READ_FLOORS_CLIMBED"/>
-  <uses-permission android:name="android.permission.health.WRITE_FLOORS_CLIMBED"/>
+  <!-- <uses-permission android:name="android.permission.health.WRITE_FLOORS_CLIMBED"/> -->
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
   <application android:name=".MainApplication" android:label="@string/app_name" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round" android:allowBackup="false" android:theme="@style/AppTheme" android:supportsRtl="true">
