--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
   <uses-permission android:name="android.permission.health.READ_TOTAL_CALORIES_BURNED"/>
-  <!-- <uses-permission android:name="android.permission.health.READ_ACTIVE_CALORIES_BURNED"/> -->
+  <uses-permission android:name="android.permission.health.READ_ACTIVE_CALORIES_BURNED"/>
   <!-- <uses-permission android:name="android.permission.health.WRITE_TOTAL_CALORIES_BURNED"/> -->
   <!-- <uses-permission android:name="android.permission.health.READ_ELEVATION_GAINED"/> -->
   <uses-permission android:name="android.permission.health.READ_STEPS"/>
