--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
   <uses-permission android:name="android.permission.health.READ_STEPS"/>
   <!-- <uses-permission android:name="android.permission.health.WRITE_STEPS"/> -->
   <uses-permission android:name="android.permission.health.READ_FLOORS_CLIMBED"/>
-  <!-- <uses-permission android:name="android.permission.health.WRITE_FLOORS_CLIMBED"/> -->
+  <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
   <application android:name=".MainApplication" android:label="@string/app_name" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round" android:allowBackup="false" android:theme="@style/AppTheme" android:supportsRtl="true">
