--- a/ios/iFeelGood.xcodeproj/xcshareddata/xcschemes/ifgapp.xcscheme
+++ b/ios/iFeelGood.xcodeproj/xcshareddata/xcschemes/ifgapp.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "iFeelGood.app"
-               BlueprintName = "iFeelGood"
-               ReferencedContainer = "container:iFeelGood.xcodeproj">
+               BuildableName = "ifeelgood.app"
+               BlueprintName = "ifeelgood"
+               ReferencedContainer = "container:ifeelgood.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "iFeelGoodTests.xctest"
-               BlueprintName = "iFeelGoodTests"
-               ReferencedContainer = "container:iFeelGood.xcodeproj">
+               BuildableName = "ifeelgoodTests.xctest"
+               BlueprintName = "ifeelgoodTests"
+               ReferencedContainer = "container:ifeelgood.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "iFeelGood.app"
-            BlueprintName = "iFeelGood"
-            ReferencedContainer = "container:iFeelGood.xcodeproj">
+            BuildableName = "ifeelgood.app"
+            BlueprintName = "ifeelgood"
+            ReferencedContainer = "container:ifeelgood.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "iFeelGood.app"
-            BlueprintName = "iFeelGood"
-            ReferencedContainer = "container:iFeelGood.xcodeproj">
+            BuildableName = "ifeelgood.app"
+            BlueprintName = "ifeelgood"
+            ReferencedContainer = "container:ifeelgood.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
