--- a/ios/ifgapp/Info.plist
+++ b/ios/ifgapp/Info.plist
@@ -36,7 +36,7 @@
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>We need access to update your health data.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>tilda-sans_black.ttf</string>
@@ -47,6 +47,12 @@
 		<string>tilda-sans_regular.ttf</string>
 		<string>tilda-sans_semibold.ttf</string>
 		<string>tilda-sans_vf.ttf</string>
+		<string>Inter-Bold.otf</string>
+		<string>Inter-ExtraBold.otf</string>
+		<string>Inter-Medium.otf</string>
+		<string>Inter-Regular.otf</string>
+		<string>Inter-SemiBold.otf</string>
+		<string>Inter-Black.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
