--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native": "0.76.0",
     "react-native-config": "^1.5.3",
     "react-native-device-info": "^14.0.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-health-connect": "^3.3.2",
     "react-native-htmlview": "^0.17.0",
@@ -46,6 +47,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
+    "react-native-share": "^12.0.11",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^15.9.0",
