--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
     ext {
-        buildToolsVersion = "35.0.0"
+        buildToolsVersion = "36.0.0"
         minSdkVersion = 26
-        compileSdkVersion = 35
-        targetSdkVersion = 33
+        compileSdkVersion = 36
+        targetSdkVersion = 36
         ndkVersion = "26.1.10909125"
         kotlinVersion = "1.9.22"
-        versionCode = 1
-        versionName = "1.0.35"
+        versionCode = 2
+        versionName = "1.0.37"
         googlePlayServicesAuthVersion = "20.7.0"
         firebaseAuthVersion = '22.3.1'
         // build_gradle_version = '8.7'
@@ -62,7 +62,7 @@ buildscript {
         maven { url 'https://developer.huawei.com/repo/'}
     }
     dependencies {
-        classpath("com.android.tools.build:gradle")
+        classpath("com.android.tools.build:gradle:8.9.1")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31")
         classpath 'com.google.gms:google-services:4.4.2'
