--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^15.9.0",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-toast-message": "^2.2.1",
     "react-native-video": "^6.11.0",
     "react-native-webview": "^13.13.2",
